# tf-torch-benchmarks

./: README.md  data_benchmark.py  pyproject.toml
pytorch_imp/: data.py
tensorflow_imp/: data.py  dataloader.py
