[tool.poetry]
name = "tf-torch-benchmarks"
version = "0.1.0"
description = "Tensorflow vs pytorch data pipelines benchmark"
authors = ["charlielito <candres.alv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.4.0"
torch = "^1.7.1"
matplotlib = "^3.3.3"
opencv-python = "^4.4.0"
tqdm = "^4.55.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
